--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@the-innovation-circuit/theme": "^0.3.1",
     "airtable-plus": "^1.0.4",
     "next": "^11.0.0",
+    "next-auth": "^3.29.0",
     "next-pwa": "^5.3.1",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
